force-app/main/default/objects/JBCXM__ScorecardMetric__c/JBCXM__ScorecardMetric__c.object-meta.xml
<CustomObject>
    <description>This is used to store the different types groups and set of measures under each group.</description>
    <label>Scorecard Metric</label>
    <nameField>
        <label>Metric Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scorecard Metrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>