force-app/main/default/objects/JBCXM__ScorecardMetric__c/fields/JBCXM__AllowOverride__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__AllowOverride__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This is used to specify whether the Grade/Score/Color is editable or not if already assigned.</description>
    <label>Allow Override</label>
    <type>Checkbox</type>
</CustomField>