force-app/main/default/objects/JBCXM__ScorecardMetric__c/fields/JBCXM__GroupId__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__GroupId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Group Id</label>
    <referenceTo>JBCXM__ScorecardMetric__c</referenceTo>
    <relationshipLabel>Scorecard Metrics</relationshipLabel>
    <relationshipName>Metrics</relationshipName>
    <type>Lookup</type>
</CustomField>