force-app/main/default/objects/JBCXM__ScorecardMetric__c/fields/JBCXM__HelpText__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__HelpText__c</fullName>
    <description>This is used to store the help text by scoring scheme range.
For example:{&quot;A&quot;:&apos;Help text for A&quot;, &quot;B&quot;:&apos;Help text for B&quot;, &quot;C&quot;:&apos;Help text for C&quot;}</description>
    <label>Help Text</label>
    <length>15000</length>
    <type>LongTextArea</type>
</CustomField>