force-app/main/default/objects/JBCXM__ScorecardMetric__c/fields/JBCXM__InputType__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__InputType__c</fullName>
    <description>This is used to specify source to generate a Grade/Score/Color of the measure.</description>
    <label>Input Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Calculated</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>