force-app/main/default/objects/JBCXM__ScorecardMetric__c/fields/JBCXM__IsActive__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>