force-app/main/default/objects/JBCXM__ScorecardMetric__c/fields/JBCXM__IsGroup__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__IsGroup__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will specify the entry is group or measure under the group.</description>
    <label>Is Group</label>
    <type>Checkbox</type>
</CustomField>