force-app/main/default/objects/JBCXM__ScorecardMetric__c/fields/JBCXM__MetricType__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__MetricType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MetricType</label>
    <referenceTo>JBCXM__GSMetaInfo__c</referenceTo>
    <relationshipLabel>Scorecard Metrics</relationshipLabel>
    <relationshipName>Scorecard_Metrics</relationshipName>
    <type>Lookup</type>
</CustomField>