force-app/main/default/objects/JBCXM__ScorecardMetric__c/fields/JBCXM__PeriodType__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__PeriodType__c</fullName>
    <description>This used to specify the whether validity period in DAY or WEEK or MONTH or YEAR.</description>
    <label>Period Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>