force-app/main/default/objects/JBCXM__ScorecardMetric__c/fields/JBCXM__ScoringSchemeId__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__ScoringSchemeId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Scorecard Scoring Scheme</label>
    <referenceTo>JBCXM__ScoringScheme__c</referenceTo>
    <relationshipLabel>Scorecard Metrics</relationshipLabel>
    <relationshipName>ScorecardMetrics</relationshipName>
    <type>Lookup</type>
</CustomField>