force-app/main/default/objects/JBCXM__ScorecardMetric__c/fields/JBCXM__ValidityPeriod__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__ValidityPeriod__c</fullName>
    <description>This used to specify the validity time of the Metric.</description>
    <label>Validity Period</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>